--- a/css/reveal.css
+++ b/css/reveal.css
@@ -13,6 +13,7 @@
  * RESET STYLES
  *********************************************/
 
+
 html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe,
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre,
 .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code,
@@ -73,6 +74,8 @@ body {
 		font-size: 0.66em;
 	}
 }
+
+img {border:none}
 
 /*********************************************
  * HEADERS
@@ -248,12 +251,6 @@ body {
 	.reveal blockquote p:first-child,
 	.reveal blockquote p:last-child {
 		display: inline-block;
-	}
-	.reveal blockquote:before {
-		content: '\201C';
-	}
-	.reveal blockquote:after {
-		content: '\201D';
 	}
 
 .reveal q {
